examples/kubernetes/app/sample-secret-provider-class.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      serviceAccountName: app
      containers:
        - name: app
          image: public.ecr.aws/nginx/nginx:latest
          volumeMounts:
            - name: app-secrets
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: app-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: app-secrets
